--- a/primer_evaluation.Rmd
+++ b/primer_evaluation.Rmd
@@ -51,8 +51,6 @@ sapply(c(.cran_packages,.bioc_packages), require, character.only = TRUE)
 
 # Github packages
 devtools::install_github("alexpiper/taxreturn")
-devtools::install_github("krassowski/complex-upset")
-library(complex-upset)
 library(taxreturn)
 library(PrimerMiner)
 
@@ -271,7 +269,7 @@ lineage %>%
 ```
 
 
-# Figure 2 - Sequence summary
+# Figure 2 - Database summary
 
 ```{r sequence tracker}
 # Create read origins 
@@ -588,7 +586,8 @@ primers <- read_csv("primer_evaluation/primer_candidates.csv") %>%
 
 primers <- primers %>%
   left_join(.$seq %>%
-  purrr::map_df(get_primer_statistics, metrics="all", disambiguate=TRUE))
+  purrr::map_df(get_primer_statistics, metrics="all", disambiguate=TRUE))  %>%
+  select(-score, -issues)
 
 write_csv(primers, "primer_evaluation/primer_candidates.csv")
 
@@ -598,7 +597,6 @@ primers %>%
   distinct() %>%
   pull(strand) %>%
   table()
-
 ```
 
 ## Primer Presence in seqs
@@ -684,6 +682,11 @@ gg.primerpresR <- out  %>%
 gg.primerpres <- gg.primerpresF / gg.primerpresR
 
 gg.primerpres
+
+# add counts primers
+primers %>%
+  left_join(out %>% select(name, seqs)) %>%
+  write_csv("primer_evaluation/primer_candidates.csv")
 
 pdf(file="fig/supplementary/primerpres.pdf", width = 8, height = 11 , paper="a4")
   plot(gg.primerpres)
@@ -887,6 +890,13 @@ gg.primers <- ggplot(data=ent_smoothed[ent_smoothed$pos==1,], aes(x = as.numeric
 gg.primers
 
 
+# Test of entropy between loops and helices
+ent_smoothed
+
+t.test(ent_smoothed %>% filter(structure=="Loop") %>% pull(ent), ent_smoothed %>% filter(structure=="Helix") %>% pull(ent)) %>%
+  broom::tidy()
+
+
 ```
 
 # Sliding window
@@ -964,9 +974,20 @@ sw_clusters <- c(fs::dir_ls(path="primer_evaluation/amplicons/win200/usearch_out
                     str_remove("^.*;"),
                   acc2 = acc2 %>% str_remove(";.*$"),
                   dist = round(dist, 2)) %>%
-    dplyr::filter(!spp1==spp2)%>%
-        dplyr::group_by(dist) %>% 
+    dplyr::filter(dist %in% c(0.03, 0.02,0.01, 0)) %>%
+    dplyr::filter(!spp1==spp2) %>%
+    dplyr::mutate(id_0.97 = case_when(dist <=0.03~ TRUE, TRUE ~ FALSE),
+                  id_0.98 = case_when(dist <=0.02~ TRUE, TRUE ~ FALSE),
+                  id_0.99 = case_when(dist <=0.01~ TRUE, TRUE ~ FALSE),
+                  id_1 = case_when(dist == 0~ TRUE, TRUE ~ FALSE)) %>%
+  pivot_longer(cols = starts_with("id"),
+               names_to = "threshold",
+               values_to= "outcome") %>%
+  mutate(threshold = threshold %>% str_remove("id_")) %>%
+  filter(outcome == TRUE)  %>%
+        dplyr::group_by(threshold) %>% 
         dplyr::summarise(mixed=n_distinct(spp1))
+    
   })%>%
   bind_rows(.id="source") %>%
   mutate(source = str_remove(basename(source), ".txt.gz")) %>%
@@ -993,13 +1014,12 @@ amplified <-c(fs::dir_ls(path="primer_evaluation/amplicons/win200/", glob = "*.f
 
 sw_joint <- sw_clusters %>%
   left_join(amplified) 
-vroom::vroom_write(sw_joint, "primer_evaluation/amplicons/sw_clusters_summary.csv", delim=",")
+vroom::vroom_write(sw_joint, "primer_evaluation/amplicons/sw_clusters_summary2.csv", delim=",")
 
 # Read in
-sw_joint <- vroom::vroom("primer_evaluation/amplicons/sw_clusters_summary.csv", delim=",")%>%
+sw_joint <- vroom::vroom("primer_evaluation/amplicons/sw_clusters_summary2.csv", delim=",") %>%
   mutate(pos = win_start) %>%
-  mutate(success =  (spp_amplified - mixed)/spp_amplified,
-           threshold = 1-dist)
+  mutate(success =  (spp_amplified - mixed)/spp_amplified)
 
 # New plot
 sw_means <- sw_joint %>%
@@ -1130,8 +1150,7 @@ combos <- expand_grid(primers %>% filter(strand=="F") %>% pull(seq),
   magrittr::set_colnames(c("Fseq", "Rseq")) %>%
   left_join(primers %>% filter(strand=="F") %>% rename_all(. %>% paste0("F",.)), by="Fseq") %>%
   left_join(primers %>% filter(strand=="R") %>% rename_all(. %>% paste0("R",.)), by="Rseq") %>%
-  mutate(amplicon = Rstart - Fend) %>%
-  filter( amplicon > 100)
+  mutate(amplicon = Rstart - Fend)
 
 # Check missing
 complete <- list.files(path="primer_evaluation/amplicons/usearch_output/", pattern = ".txt.gz") %>%
@@ -1144,7 +1163,7 @@ setdiff(complete,paste0(combos$Fname, "_",  combos$Rname))
 
 # Get mixed clusters
 library(furrr)
-plan(multiprocess, workers=4)
+plan(multiprocess, workers=8)
 mixed_clusters <- fs::dir_ls(path="primer_evaluation/amplicons/usearch_output/", glob = "*.txt.gz")%>%
   furrr::future_map(function(x){
   #purrr::map(function(x){
@@ -1158,19 +1177,29 @@ mixed_clusters <- fs::dir_ls(path="primer_evaluation/amplicons/usearch_output/",
                     str_remove("^.*;"),
                   acc2 = acc2 %>% str_remove(";.*$"),
                   dist = round(dist, 2)) %>%
-    dplyr::filter(!spp1==spp2)
+    filter(dist %in% c(0.03, 0.02,0.01, 0)) %>%
+    dplyr::filter(!spp1==spp2) %>%
+    dplyr::mutate(id_0.97 = case_when(dist <=0.03~ TRUE, TRUE ~ FALSE),
+                  id_0.98 = case_when(dist <=0.02~ TRUE, TRUE ~ FALSE),
+                  id_0.99 = case_when(dist <=0.01~ TRUE, TRUE ~ FALSE),
+                  id_1 = case_when(dist == 0~ TRUE, TRUE ~ FALSE)) %>%
+  pivot_longer(cols = starts_with("id"),
+               names_to = "threshold",
+               values_to= "outcome") %>%
+  mutate(threshold = threshold %>% str_remove("id_")) %>%
+  filter(outcome == TRUE) 
 
   all <- df %>%
-        dplyr::group_by(dist) %>% 
+        dplyr::group_by(threshold) %>% 
         dplyr::summarise(mixed=n_distinct(spp1)) %>%
         dplyr::mutate(type="all")
   pests <- df %>%
-        dplyr::group_by(dist) %>% 
+        dplyr::group_by(threshold) %>% 
         filter(spp1 %in% pestlist$Species) %>%
         dplyr::summarise(mixed=n_distinct(spp1)) %>%
         dplyr::mutate(type="pest")
-      out <- bind_rows(all, pests)
-      return(out)
+  out <- bind_rows(all, pests)
+  return(out)
   
   })%>%
   bind_rows(.id="source") %>%
@@ -1204,17 +1233,16 @@ joint <- mixed_clusters %>%
   left_join(amplified) %>%
   mutate(combos = source) %>% 
   tidyr::separate(source, into=c("Fname", "Rname"), sep="_", extra="merge")
-#vroom::vroom_write(joint, "primer_evaluation/amplicons/mixed_clusters_summary.csv", delim=",")
+#vroom::vroom_write(joint, "primer_evaluation/amplicons/mixed_clusters_summary2.csv", delim=",")
 
 
 # Make figure
 
 # Count reads
-joint <- vroom::vroom("primer_evaluation/amplicons/mixed_clusters_summary.csv", delim=",") %>%
+joint <- vroom::vroom("primer_evaluation/amplicons/mixed_clusters_summary2.csv", delim=",") %>%
   left_join(combos) %>% 
-  mutate(success =  (spp_amplified - mixed)/spp_amplified,
-         threshold = 1-dist) %>%
-  dplyr::select(Fname,Rname, dist, threshold,
+  mutate(success =  (spp_amplified - mixed)/spp_amplified) %>%
+  dplyr::select(Fname,Rname,  threshold,
                 mixed, type, seqs_amplified,
                 spp_amplified, amplicon, combos, success) 
 
@@ -1223,7 +1251,7 @@ joint <- vroom::vroom("primer_evaluation/amplicons/mixed_clusters_summary.csv", 
 ref <- joint %>% 
   dplyr::filter(Fname == "LCO1490"&  Rname=="HCO2198") %>% 
               select(ref_success = success,
-                     dist, threshold, type) %>%
+                     threshold, type) %>%
   dplyr::filter(threshold %in% c(0.97,0.98,0.99, 1))%>%
   group_by(type) %>%
   summarise(ref_success = mean(ref_success)) %>%
@@ -1244,8 +1272,11 @@ id_success <- joint %>%
 
 
 # Breakpoint regression
+set.seed(666)
 model_dat <- id_success %>%
-  dplyr::select(combos, amplicon, threshold, success)
+  dplyr::select(combos, amplicon, threshold, success, success_alr, success_rat)
+
+# SOme amplicon lengths are missing so getitng NAs
 
 library(chngpt)
 breakpoint_fit <- model_dat %>% 
@@ -1254,10 +1285,18 @@ breakpoint_fit <- model_dat %>%
   mutate(fits = map(data, ~chngptm(formula.1=success~1, formula.2=~amplicon,
                                    type="segmented", family="gaussian",data = .)),
          summary = map(fits, summary),
-         preds = map2(fits, data, predict),
+         #preds = map2(fits, data, predict),
+         aug = map2(fits, data, function(x,y){
+           preds <- predict(x,y)
+           out <- y
+           out$preds <- preds
+           out$res <- NA
+           out$res[!is.na(out$preds)] <- resid(x)
+           return(out)
+           }),
          breakpoint = map(fits, "chngpt"),
          breakpoint_ests = map(summary, function(x){ as.data.frame(t(x$chngpt))}),
-         coef_info = map(summary,function(x){ as_tibble(x$coefficients, rownames="term" )}),
+         coef_info = map(summary,function(x){ as_tibble(x$coefficients, rownames="term" )})
          )
   
 # Get SE of breakpoints
@@ -1280,7 +1319,7 @@ slope_coefs <- breakpoint_fit %>%
 
 
 dat_pred <- breakpoint_fit %>%
-  unnest(preds, data, breakpoint)%>%
+  unnest(aug, breakpoint)%>%
   select(-where(is.list))  %>%
   drop_na() %>%
   left_join(slope_coefs %>%
@@ -1304,32 +1343,37 @@ ref_annot <- id_success %>%
   filter(combos == "LCO1490_HCO2198")
 
 gg.id <- id_success %>%
+  left_join(dat_pred) %>%
   mutate(type = type %>% str_replace("all", "All Insects") %>% str_replace("pest", "Pest Insects")) %>%
-  ggplot(aes(x=amplicon, y=success, colour=success))+
-  geom_jitter(width = 5, height=0.01, alpha=0.5)+
+  ggplot(aes(x=amplicon, y=success, colour=res))+
+  geom_jitter(width = 5, height=0.01, alpha=0.4)+
    geom_line(data=dat_pred[dat_pred$amplicon < dat_pred$breakpoint,],
              aes(x=amplicon, y=preds),  color = 'red', inherit.aes = FALSE) +
   geom_line(data=dat_pred[dat_pred$amplicon >= dat_pred$breakpoint,],
-            aes(x=amplicon, y=preds, linetype=signif_post_slope),  color = 'red', inherit.aes = FALSE) +
+            aes(x=amplicon, y=preds),  color = 'red', inherit.aes = FALSE) +
   geom_point(data=break_annot, aes(x=amplicon, y=preds),  color = 'red', inherit.aes = FALSE) +
   geom_text(data=break_annot, aes(x=amplicon, y=preds,
                                   label=paste0(breakpoint, "bp")), #,ifelse(pval < 0.001,"<0.001", ">0.001")
-            nudge_y = 0.1,nudge_x = 120,  color = 'red', inherit.aes = FALSE) +
-  geom_text(data=ref_annot, aes(x=amplicon, y=success,label=paste0("Max: ",round((success* 100),2), "%")),
-            nudge_y = 0.05,  color = 'blue', inherit.aes = FALSE) +
+            nudge_y = 0.1,nudge_x = 10,  color = 'red', inherit.aes = FALSE) +
+  geom_text(data=ref_annot, aes(x=amplicon, y=success,label=paste0("Max: ",round((success* 100),1), "%")),
+            nudge_y = 0.05, nudge_x = -100,  color = 'blue', inherit.aes = FALSE) +
   geom_vline(data=dat_pred, aes(xintercept = breakpoint), colour="black", linetype = "dashed") +
-  scale_colour_gradient(low ="firebrick", high ="darkslateblue", na.value = "grey") +
   geom_hline(yintercept=0, colour="grey80")+
+  #scale_colour_gradient(low ="firebrick", high ="darkslateblue", na.value = "grey") +
+  #scale_colour_gradient2(low ="firebrick",mid="goldenrod", high ="darkslateblue", na.value = "grey") +
+  #scale_colour_distiller(palette = "RdYlBu")+
+  scale_colour_viridis_c(option="D")+
   base_theme+
   facet_grid(type~threshold) +
-  theme(legend.position = "none") + 
-  labs(x="Amplicon length",
-       y="Successfully identified") +
   coord_cartesian(ylim=c(0.5,1))+
   scale_linetype_manual(values=c( "dashed", "solid"))+
   scale_y_continuous(labels = scales::percent) +
   scale_x_continuous(labels=scales::unit_format(unit="bp"))+
-  theme(panel.grid.minor = element_blank())
+  theme(panel.grid.minor = element_blank(),
+        legend.position = "right")+ 
+  labs(x="Amplicon length",
+       y="Successfully identified",
+       colour= "Residuals") 
 
 gg.id
 
@@ -1340,6 +1384,18 @@ gg.id
 ```{r ID success on tree}
 # Autocorrelation
 tree <- ape::read.tree("reference/trees/ultrametric_insecta_tree_order_constrained.nwk")
+
+# get Lineage for tree
+seqs <- insect::readFASTA("reference/merged_final.fa.gz")
+seqs <- acc2hex(seqs)
+lineage <- names(seqs) %>%
+  str_split_fixed(pattern="\\|", n = 2) %>%
+  as_tibble() %>%
+  separate(V2, into=c("taxid","Kingdom", "Phylum", 
+    "Class", "Order", "Family", "Genus", "Species"), sep=";") %>%
+  dplyr::rename(acc = V1)%>%
+  mutate(Species = Species %>% str_replace_all(" ", "_")) %>%
+  dplyr::select(-Species)
 
 # Get mixed clusters for the LCO-HCO gene region
 folmer_id_spp <- vroom::vroom("primer_evaluation/amplicons/usearch_output/LCO1490_HCO2198.txt.gz",
@@ -1353,9 +1409,18 @@ folmer_id_spp <- vroom::vroom("primer_evaluation/amplicons/usearch_output/LCO149
                     str_remove("^.*;"),
                   acc2 = acc2 %>% str_remove(";.*$"),
                   dist = round(dist, 2)) %>%
-    mutate(threshold = 1-dist) %>%
-    filter(threshold %in% c(0.97, 0.98,0.99,1)) %>%
-    dplyr::filter(!spp1==spp2)%>%
+    filter(dist %in% c(0.03, 0.02,0.01, 0)) %>%
+    dplyr::filter(!spp1==spp2) %>%
+    dplyr::mutate(id_0.97 = case_when(dist <=0.03~ TRUE, TRUE ~ FALSE),
+                  id_0.98 = case_when(dist <=0.02~ TRUE, TRUE ~ FALSE),
+                  id_0.99 = case_when(dist <=0.01~ TRUE, TRUE ~ FALSE),
+                  id_1 = case_when(dist == 0~ TRUE, TRUE ~ FALSE)
+    )%>%
+  pivot_longer(cols = starts_with("id"),
+               names_to = "threshold",
+               values_to= "outcome") %>%
+  mutate(threshold = threshold %>% str_remove("id_")) %>%
+  filter(outcome == TRUE) %>%
     dplyr::group_by(threshold, acc1, spp1) %>% 
     dplyr::summarise(mixed=n_distinct(spp2)) %>%
     ungroup() %>%
@@ -1363,10 +1428,36 @@ folmer_id_spp <- vroom::vroom("primer_evaluation/amplicons/usearch_output/LCO149
   select(threshold, tips, values = mixed)
 
 
+# Plot highest - binary!
+gg.failed <- folmer_id_spp %>%
+  separate(tips, into=c("acc", "species"), sep="\\|") %>%
+  left_join(lineage) %>%
+  group_by(Order, Genus, threshold) %>%
+  mutate(values = case_when(values > 1 ~ 1, TRUE ~ 0)) %>%
+  summarise(values = sum(values)) %>%
+  ungroup()%>%
+  group_by(threshold) %>%
+  top_n(10, values) %>%
+    mutate(
+    Genus = make.unique(Genus ),
+    Genus  = factor(Genus ),
+    Genus  = reorder_within(Genus, values, threshold)) %>%
+  ggplot(aes(x=Genus, y=values, fill=Order))+
+  geom_col() +
+  scale_fill_brewer(palette = "Paired")+
+  facet_grid(~threshold, drop=TRUE, scales="free_x") +
+  scale_x_reordered()+
+  base_theme +
+  theme(legend.position = "right")
+
+gg.failed
+
+
 thresholds <- unique(folmer_id_spp$threshold)
 acfvec <- traitvec <- trait_signif <- vector("list", length = length(thresholds))
 names(acfvec) <- names(traitvec) <- names(trait_signif) <- thresholds
 
+set.seed(666)
 i=1
 for(i in 1:length(thresholds)){
   weights <- tree$tip.label %>% 
@@ -1382,15 +1473,18 @@ for(i in 1:length(thresholds)){
   names(tip_states) <- weights %>%
     dplyr::pull(tips)
   
-  # Autocorrelation funciton
-  acf <- castor::get_trait_acf(tree, tip_states, Npairs=1e8, Nbins=100)
-  
-  # Trait depth
+  # Binary tip states
   tip_states_binary <- tip_states
   tip_states_binary[tip_states_binary >0] <- 1
+
+  
+  # Autocorrelation funciton
+  acf <- castor::get_trait_acf(tree, tip_states_binary, Npairs=1e8, Nbins=100)
+  
+  # Trait depth
   consentrait <- get_trait_depth(tree, tip_states_binary,
-                                 min_fraction = 0.9, #90% of clade must be insufficiently ID'd to be problmeatic
-                                 count_singletons=TRUE, weighted=FALSE, Npermutations = 1000)
+                                 min_fraction = 0.5, #90% of clade must be insufficiently ID'd to be problmeatic
+                                 count_singletons=FALSE, weighted=TRUE, Npermutations = 1000)
   
   # Create output data frame
   acfvec[[i]] <- data.frame(
@@ -1418,6 +1512,8 @@ for(i in 1:length(thresholds)){
   )
 
 }
+
+# Try pruning tree to species?
 
 # Phylogenetic conservatism
 trait_signif%>%
@@ -1452,14 +1548,19 @@ gg.acf
 bad_clades <- traitvec %>%
   bind_rows(.id="threshold")
 
+outliers <- bad_clades %>%
+    group_by(threshold) %>%
+  summarise(mean = mean(traits_per_pos_clades), sd = sd(traits_per_pos_clades), zscore = (traits_per_pos_clades - mean(traits_per_pos_clades))/sd(traits_per_pos_clades)) 
+
+
 #clade labels
 bad_clades_labels <- bad_clades %>%
-  group_by(threshold) %>%
-  arrange(desc(traits_per_pos_clades),desc(mean_depth_pos_clades), .by_group = TRUE) %>%
-  rownames_to_column("rank") %>%
-  mutate(rank = as.numeric(rank)) %>%
-    top_n(-10, rank) %>%
-    #top_frac(-.001, rank) %>%
+    group_by(threshold) %>%
+    mutate(zscore = (traits_per_pos_clades - mean(traits_per_pos_clades))/sd(traits_per_pos_clades)) %>%
+    arrange(pos_clade_id, desc(zscore), .by_group = TRUE) %>% 
+    mutate(rank = rank(zscore, ties.method = "first")) %>% 
+    filter(zscore > 6) %>%
+    top_n(10, zscore) %>%
   ungroup() %>%
   mutate(subtree_taxonomy = map(pos_clade_id,function(x){
     subtree <- castor::get_subtree_at_node(tree, x-Ntip(tree))$subtree
@@ -1468,25 +1569,61 @@ bad_clades_labels <- bad_clades %>%
       mutate(acc= value %>% str_remove("\\|.*$"))%>%
       left_join(lineage, by="acc")
     print(unique(taxonomy$Genus))
-    names(which.max(table(taxonomy$Genus)))
+    
+    if(length(unique(taxonomy$Genus)) > 1) {
+        data.frame(
+        subtree_taxonomy = names(which.max(table(taxonomy$Family))),
+        order_taxonomy = names(which.max(table(taxonomy$Order)))
+                        )
+    }else {
+        data.frame(
+        subtree_taxonomy = names(which.max(table(taxonomy$Genus))),
+        order_taxonomy = names(which.max(table(taxonomy$Order)))
+                        )
+    }
   }))%>% 
-  unnest(subtree_taxonomy) %>%
-  filter(!duplicated(subtree_taxonomy))
+  unnest(subtree_taxonomy)# %>%
+  #filter(!duplicated(subtree_taxonomy))
 
 library(ggrepel)
 
 gg.bad_clades <- bad_clades %>% 
-  ggplot(aes(x= mean_depth_pos_clades, y=traits_per_pos_clades, colour=mean_depth_pos_clades)) + 
-  geom_point(alpha=0.2) + 
-  geom_point(data = bad_clades_labels, aes(x=mean_depth_pos_clades, y=traits_per_pos_clades), colour="red")+
-  geom_text_repel(data = bad_clades_labels, aes(x=mean_depth_pos_clades, y=traits_per_pos_clades, label= subtree_taxonomy), colour="red")+
-  scale_colour_gradient(low ="darkslateblue", high ="firebrick", na.value = "grey") +
+  filter(!paste0(threshold, pos_clade_id) %in% paste0(bad_clades_labels$threshold, bad_clades_labels$pos_clade_id)) %>%
+  ggplot(aes(x= mean_depth_pos_clades, y=traits_per_pos_clades, fill=traits_per_pos_clades)) + 
+  geom_jitter(alpha=0.2, shape=21, height=.2, width=.2) + 
+  geom_point(data = bad_clades_labels, aes(x=mean_depth_pos_clades, y=traits_per_pos_clades), colour="firebrick", alpha=0.8)+
+  geom_text_repel(data = bad_clades_labels, aes(x=mean_depth_pos_clades, y=traits_per_pos_clades, label= subtree_taxonomy, colour=order_taxonomy))+
+  scale_fill_viridis_c(option="C", trans="log10")+
+  #scale_fill_gradient(low ="darkslateblue", high ="firebrick", na.value = "grey") +
+  scale_color_brewer(palette = "Paired")+
     facet_grid(~threshold) +
+  scale_y_log10() +
   base_theme+
-  theme(legend.position = "none") + 
+  theme(legend.position = "right") + 
     labs(x="Phylogenetic depth of clade",
-         y="# Failed ID's (Full length)")
+         y="# Failed ID's (Full length)",
+         fill = NULL,
+         colour= "Taxonomic order")
 
+gg.bad_clades
+
+# Additional bad clades plot
+library(tidytext)
+gg.zscores <- bad_clades_labels %>%
+  mutate(
+    subtree_taxonomy = make.unique(subtree_taxonomy ),
+    subtree_taxonomy  = factor(subtree_taxonomy ),
+    subtree_taxonomy  = reorder_within(subtree_taxonomy, zscore, threshold)) %>%
+  ggplot(aes(x = subtree_taxonomy, y = traits_per_pos_clades , fill=order_taxonomy))+
+  geom_col()+
+  #geom_text(aes(label= subtree_taxonomy), angle=90)+
+  scale_fill_brewer(palette = "Paired")+
+  facet_grid(~threshold, drop=TRUE, scales="free_x") +
+  scale_x_reordered()+
+  base_theme +
+  theme(legend.position = "right")
+  
+gg.zscores
 
 # Plot figure 4 
 #Fig4a <- plotvec[[1]] / plotvec[[2]] / plotvec[[3]] / plotvec[[4]]
@@ -1496,6 +1633,8 @@ gg.bad_clades <- bad_clades %>%
 
 Fig4 <-  gg.id /  gg.bad_clades / gg.acf + plot_layout(heights = c(4,2,1)) + plot_annotation(tag_levels = "A")
 
+
+Fig4
 pdf(file="fig/Fig4_id_success.pdf", width = 11, height = 8 , paper="a4r")
   plot(Fig4)
 try(dev.off(), silent=TRUE)
@@ -1682,7 +1821,7 @@ for (i in 1:length(uprimers)){
   tip_states <- tip_states[!is.na(row2tip),,drop = FALSE]
   hsp_states <- castor::hsp_independent_contrasts(tree = genus_tree,
                                               tip_states = tip_states$values,
-                                              weighted = TRUE,
+                                              weighted = FALSE,
                                               check_input = TRUE)$states
   
   # Get distance of each tip to tips that have data
@@ -1813,12 +1952,44 @@ gg.mismatch <- imputed %>%
   scale_x_discrete(expand=c(0,0))
 
 # Density plot of mismatch
+zscore_labels <- imputed %>%
+  left_join(p2$data %>% dplyr::select(label, y) %>% dplyr::rename(Genus = label)) %>%
+  group_by(Genus, y) %>%
+  summarise(values = mean(sum, na.rm=TRUE)) %>%
+  ungroup() %>%
+  left_join(lineage %>% select(Genus, Family, Order) %>% distinct())%>%
+  arrange(y) 
+  
+chunk = 1000
+n <- nrow(zscore_labels)
+r  <- rep(1:ceiling(n/chunk),each=chunk)[1:n]
+zscore_labels_chunked <- split(zscore_labels,r)
+
+zscore_labels <- zscore_labels_chunked %>% 
+  purrr::map(function(x){
+    df <- x %>%
+      mutate(zscore = (values - mean(values, na.rm=TRUE))/sd(values, na.rm=TRUE)) %>%
+      filter(zscore  > 3, values  >200) 
+    if(nrow(df) > 0){
+        out <- df %>%
+        summarise(y = mean(y), values = max(values), annot =  case_when(
+        length(unique(Genus)) == 1 ~ names(which.max(table(Genus))),
+        length(unique(Genus)) > 1~  names(which.max(table(Family)))
+        ))
+    }
+    return(out)
+  }) %>%
+  bind_rows() %>%
+  filter(!is.na(annot))
+
+    
 gg.density <- imputed %>%
   left_join(p2$data %>% dplyr::select(label, y) %>% dplyr::rename(Genus = label)) %>%
   group_by(Genus, y) %>%
   summarise(values = mean(sum, na.rm=TRUE)) %>%
   ggplot(aes(x = y, y=values, fill=values, colour=values)) +
   geom_point(size=0.01, alpha=0.5)+
+  geom_text(data=zscore_labels, aes(label = annot), hjust=0) +
   #geom_smooth(span = 0.1)+
   scale_colour_gradient(low="darkslateblue", high="firebrick") + 
   scale_x_continuous(expand=c(0,0)) +
@@ -1941,6 +2112,34 @@ sup3
 pdf(file="fig/supplementary/sup_mismatch.pdf", width = 8, height = 11 , paper="a4")
   plot(sup3)
 try(dev.off(), silent=TRUE)
+  
+
+# Mismatch by primer degeneracy
+  
+model_df <- imputed %>% 
+  left_join(primers) %>%
+  select(primer, values, hsp, start, end, degeneracy)%>%
+  pivot_longer(cols=c("values", "hsp"),
+               names_to="type",
+               values_to = "values")#%>%
+  #mutate(degeneracy = log10(degeneracy))
+  
+# Regresison
+degen_fits <- model_df %>%
+  group_by(type) %>%
+  nest() %>%
+  mutate(fit = map(data, ~ lm(values ~ degeneracy, data = .x)),
+    tidied = map(fit, tidy),
+    glanced = map(fit, glance),
+    augmented = map(fit, augment)
+         )
+
+degen_fits %>%
+  unnest(tidied)
+
+degen_fits  %>% 
+  select(glanced) %>% 
+  unnest(glanced)
 ```
 
 # ACF Mismatch
@@ -2098,6 +2297,227 @@ ggplot(aes(x = primer, y=mean_depth_pos_clades, size=traits_per_pos_clades )) +
 ```
 
 
+# Summary 
+
+```{r}
+# Primer stats
+primers <- read_csv("primer_evaluation/primer_candidates.csv")
+
+# Number of sequences
+# Make plot
+primer_stats <- primers %>%
+      mutate(poly=pmax(poly_A,poly_T, poly_G, poly_C)) %>%
+  select(primer = name, strand,GC = `GC%`, GC_last2, tm, degeneracy, length, poly, nseqs = seqs) %>%
+  #mutate(degeneracy = log10(degeneracy)) %>%
+  pivot_longer(3:ncol(.),
+               names_to = "metric",
+               values_to ="value") %>%
+    mutate(label = case_when(
+    metric == "GC" & between(value, 0.4, 0.6) ~ "good",
+    metric == "GC" & (between(value, 0.3, 0.4) |  between(value, 0.6, 0.7)) ~ "medium",
+    metric == "GC" & (between(value, 0, 0.3) |  between(value, 0.7, 0.1)) ~ "bad",
+    
+    metric == "degeneracy" & between(value, 0, 517) ~ "good",
+    metric == "degeneracy" & between(value, 517, 1026) ~ "medium",
+    metric == "degeneracy" & value > 1026 ~ "bad",
+    
+    metric == "GC_last2" & value == 2 ~ "good",
+    metric == "GC_last2" & value == 1 ~ "medium",
+    metric == "GC_last2" & value == 0 ~ "bad",
+    
+    metric == "length" & between(value, 18, 24) ~ "good",
+    metric == "length" & (between(value, 16, 18) | between(value, 24, 26)) ~ "medium",
+    metric == "length" & (value < 16 | value > 26) ~ "bad",
+    
+    metric == "poly" & value <= 3 ~ "good",
+    metric == "poly" & value <= 4 ~ "medium",
+    metric == "poly" & value > 4~ "bad",
+    
+    metric == "tm" & between(value, 50, 60) ~ "good",
+    metric == "tm" & (between(value, 45, 50) | between(value, 60, 65)) ~ "medium",
+    metric == "tm" & (value < 45 | value > 65) ~ "bad",
+    
+    metric == "nseqs" & value > 250000 ~ "good",
+    metric == "nseqs" & between(value, 100000, 250000)  ~ "medium",
+    metric == "nseqs" & value < 100000 ~ "bad",
+  )) 
+
+# Mismatch summary
+mismatch_summary <-  vroom::vroom("primer_evaluation/mismatch_summary.csv.gz",delim = ",") %>%
+  mutate(sum = replace_na(sum, 0),
+         strand = replace_na(strand, "R")) %>%
+  group_by(primer, strand) %>%
+  summarise(mismatch = mean(sum, na.rm=TRUE),sd = sd(sum)) %>%
+  mutate(upper = mismatch + 2*sd, 
+         lower  = mismatch -2*sd) %>%
+  mutate(lower = case_when(
+    lower > 0 ~ lower,
+    lower < 0  ~ 0
+  )) %>%
+  mutate(label = case_when(
+    mismatch < 20 ~ "good",
+    between(mismatch, 20, 100) ~ "medium",
+    mismatch > 100 ~ "bad"
+  ))
+
+# Id success summary
+id_success_summary <- vroom::vroom("primer_evaluation/amplicons/mixed_clusters_summary.csv", delim=",") %>%
+  mutate(success =  (spp_amplified - mixed)/spp_amplified,
+         threshold = 1-dist) %>%
+  pivot_longer(contains("name"),
+               names_to="strand",
+               values_to="primer") %>%
+  mutate(strand = strand %>% str_remove("name")) %>%
+  select(primer, strand, threshold, success, type)%>%
+  filter(threshold  >= 0.97) %>%
+  group_by(primer, strand, type) %>%
+  summarise(success = mean(success, na.rm=TRUE), sd = sd(success, na.rm = TRUE)) %>%
+  mutate(upper = success + 2*sd, 
+         lower  = success -2*sd)%>%
+  mutate(label = case_when(
+    success > 0.85~ "good",
+    between(success, 0.80, 0.85) ~ "medium",
+    success < 0.80 ~ "bad"
+  ))
+
+# rankings
+
+ranks <- primer_stats %>%
+  select(primer,strand, label)%>%
+    mutate(type="summary") %>%
+  bind_rows(
+  id_success_summary %>%
+  select(primer, strand, label)%>%
+    mutate(type="id")) %>%
+  bind_rows(mismatch_summary %>%
+  select(primer, strand,label) %>%
+    mutate(type="mismatch")) %>%
+  mutate(count = case_when(
+    label == "good" ~ 2,
+    label == "medium" ~ 1,
+    label == "bad" ~0
+  )) %>%
+  group_by(primer, strand) %>%
+  summarise(count = sum(count)) %>%
+  ungroup() %>%
+  group_by(strand)%>%
+  arrange(desc(count),.by_group	=TRUE) %>%
+  mutate(rank = 1:n())
+
+# ID success from all primer combinations
+
+gg.primer_stats <-primer_stats %>%
+  mutate(value = case_when(
+    metric=="GC" ~ paste0(round(value*100, 1), "%"),
+    metric=="nseqs" ~ paste0(round(value/1000,0), "K"),
+    #metric=="length" ~ paste0(value, "bp"),
+    #metric=="GC_last2" ~ paste0(value, "bp"),
+    #metric=="poly" ~ paste0(value, "bp"),
+    metric=="tm" ~ paste0(round(value,1), "°C"),
+    TRUE ~ as.character(round(value,1))
+  ))%>%
+  mutate(metric = factor(metric, levels = c("nseqs","degeneracy","length", "tm", "GC", "GC_last2", "poly"))) %>%
+  left_join(ranks)%>%
+  mutate(primer = factor(primer)) %>%
+  ggplot(aes(x = fct_reorder(primer, -rank), y = metric, fill=label)) + 
+  geom_tile(alpha=1) +
+  geom_text(aes(label=value), colour="black") +
+  facet_grid(strand~., drop = TRUE, scales = "free") +
+  base_theme + 
+  scale_fill_manual(values = c(bad ="#fc8d59", medium="#ffffbf", good="#91bfdb")) +
+  coord_flip() +
+  theme(#axis.text.y=element_blank(),
+        axis.title.y = element_blank())
+
+gg.mean_mismatch <- mismatch_summary %>% 
+    left_join(ranks)%>%
+  mutate(primer = factor(primer)) %>%
+  ggplot(aes(x = fct_reorder(primer, -rank), y = mismatch)) +
+  geom_pointrange(aes(ymin=lower, ymax = upper, colour=label)) +
+  #geom_boxplot(outlier.alpha = 0.1) +
+  #scale_y_log10()+
+  facet_grid(strand~., drop = TRUE, scales = "free") +
+  base_theme + 
+  scale_colour_manual(values = c(bad ="#fc8d59", medium="#ffffbf", good="#91bfdb")) +
+  coord_flip() +
+  theme(strip.text = element_blank(), 
+       # axis.text.y = element_blank()
+        ) +
+  labs(x = NULL, y = "Mean Mismatch")
+
+gg.primer_success <- id_success_summary  %>%
+    left_join(ranks)%>%
+  mutate(primer = factor(primer))%>%
+  ggplot(aes(x = fct_reorder(primer, -rank), y = success, colour=label)) +
+  geom_pointrange(aes(ymin=lower, ymax = upper)) +
+  #geom_boxplot(outlier.alpha = 0.1) +
+  #scale_y_log10()+
+  facet_grid(strand~type, drop = TRUE, scales = "free") +
+  base_theme + 
+  scale_colour_manual(values = c(bad ="#fc8d59", medium="#ffffbf", good="#91bfdb")) +
+  scale_y_continuous(labels = scales::percent_format())+
+  coord_flip() +
+  theme(strip.text.y = element_blank(), legend.position = "none") +
+  labs(y = "Successfully Identified")
+
+# Plotting
+gg.primer_success + gg.mean_mismatch + gg.primer_stats + plot_layout(widths =c(2,1, 6))
+
+# Add mean ID success for windows starting at end base of forward, or start base of reverse
+
+
+
+# OLD SW Id success plot
+sw_joint <- vroom::vroom("primer_evaluation/amplicons/sw_clusters_summary.csv", delim=",")%>%
+  mutate(pos = win_start) %>%
+  mutate(success =  (spp_amplified - mixed)/spp_amplified,
+           threshold = 1-dist)
+
+sw_means <- sw_joint %>%
+  #filter(win_start > 25, win_end < (712-26)) %>%
+  group_by(source, threshold) %>%
+  group_split() %>%
+  purrr::map(function(x){
+    x %>% dplyr::slice(rep(1:n(), each = unique(x$win_length))) %>%
+      mutate(pos = seq(unique(x$win_start) , (unique(x$win_end)-1), 1))
+  }) %>%
+  bind_rows() %>%
+  ungroup() %>%
+  group_by(threshold, pos, win_length) %>%
+  summarise(success = mean(success))
+
+primers %>%
+  select(name, strand, start, end) %>%
+  left_join(sw_means %>%
+            filter(threshold > 0.97) %>%
+            group_by(win_length, pos) %>% 
+            summarise(success = mean(success, na.rm=TRUE)) %>%
+            select(start = pos, start_success = success, win_length)) %>%
+  left_join(sw_means %>%
+             filter(threshold > 0.97) %>%
+            group_by(win_length, pos) %>% 
+            summarise(success = mean (success)) %>%
+            select(end = pos, end_success = success, win_length)) %>%
+  mutate(id_success = case_when(
+    strand == "F" ~ end_success,
+    strand == "R" ~ start_success
+  )) %>%
+  select(primer = name, strand, id_success, win_length)%>% 
+  ggplot(aes(x = primer, y = id_success, colour=win_length)) +
+  geom_point() +
+  #geom_boxplot(outlier.alpha = 0.1) +
+  #scale_y_log10()+
+  facet_grid(strand~., drop = TRUE, scales = "free") +
+  base_theme + 
+  #scale_colour_manual(values = c(bad ="#fc8d59", medium="#ffffbf", good="#91bfdb")) +
+  coord_flip() +
+  theme(strip.text = element_blank(), legend.position = "bottom")
+
+```
+
+
+
+
 
 ## Get LCA Probabilities
 
@@ -2186,6 +2606,7 @@ pdf(file="fig/lca_probabilities.pdf", width = 8, height = 11 , paper="a4")
 try(dev.off(), silent=TRUE)
  
 ``` 
+
  
 
 # Off-target amplification
@@ -2516,147 +2937,6 @@ off_target %>%
 # Why are some missing?
 ```
 
-# PrimerTree
-
-Note: Detailed information about installing and running PrimerTree can be found at https://github.com/jimhester/primerTree
-
-Could use a slurm array to submit each seperately with all combinatons. 
-Also worth having a function to count degeneracy for the constraints section
-```{r off target}
-primers <- read_csv("primer_evaluation/primer_candidates.csv")
-library(primerTree)
-
-
-forward <- "GGDRCWGGWTGAACWGTWTAYCCNCC"
-rev <- "TATDGTRATDGCHCCNGC"
-
-test <- search_primer_pair(
-  forward,
-  rev,
-  api_key ="1c0a0c4afa28448650a1450662a22c68f208",
-  num_permutations = 20
-)
-ranks = c("kingdom", "phylum", "class", 
-    "order", "family", "genus", "species")
-
-lineage <- test3[["taxonomy"]] %>%
-  select(all_of(ranks))%>% 
-  tidyr::unite(col = pathString, 
-  !!ranks, sep = "/") %>%
-  dplyr::mutate(pathString = paste0("Root/", pathString)) %>%
-  data.tree::as.Node(.)
-
-tree <- ape::read.tree(textConnection(data.tree::ToNewick(lineage, heightAttribute = NULL)))
-
-library(ggtree)
-
-ggtree(tree)
-
-
-dir.create("PrimerTree")
-#for (i in 1:nrow(dat.I)) {
-  assign(paste("PT", dat.I$Name[i], sep = "."), search_primer_pair(name = dat.I$Name[i], dat.I$F.seq[i], dat.I$R.seq[i], num_permutations = 50, num_aligns = 1000))
-  saveRDS(paste("PT", dat.I$Name[i], sep = "."),paste0("PrimerTree/PT.",dat.I$Name[i],".rds"))
-}
-#, clustal_options = c(exec='clustal-omega-1.2.2-win64/clustalo.exe')
-
-# 3.2. - Inspect the sequence length distribution for each primer pair and remove any sequence records with a length deviating from the
-#        majority of the sequences.
-
-#Below code requires clustal files in R install directory
-
-seq_lengths(`PT.AgPestF1-AgPestR1a`) # No obvious outliers
-`PT.AgPestF1-AgPestR1a` <- filter_seqs(`PT.AgPestF1-AgPestR1a`, min_length = 200)
-
-seq_lengths(`PT.AgPestF2-AgPestR2`) # No obvious outliers
-`PT.AgPestF2-AgPestR2` <- filter_seqs(`PT.AgPestF2-AgPestR2`, min_length = 200)
-
-seq_lengths(`PT.fwhF2-fwhR2n`) # No obvious outliers
-`PT.fwhF2-fwhR2n` <- filter_seqs(`PT.fwhF2-fwhR2n`, min_length = 200)
-
-seq_lengths(`PT.SauronS878-BR1`) # No obvious outliers
-`PT.SauronS878-BR1` <- filter_seqs(`PT.SauronS878-BR1`, min_length = 200)
-
-#Plot trees
-t1 <- plot(`PT.AgPestF1-AgPestR1a`, ranks='class', main='PT.AgPestF1-AgPestR1a', rotate=45, size=1)
-t2 <- plot(`PT.AgPestF2-AgPestR2`, ranks='class', main='PT.AgPestF2-AgPestR2', rotate=45, size=1)
-t3 <- plot(`PT.fwhF2-fwhR2n`, ranks='class', main='PT.fwhF2-fwhR2n', rotate=45, size=1)
-t4 <- plot(`PT.SauronS878-BR1`, ranks='class', main='PT.SauronS878-BR1', rotate=45, size=1)
-
-Fig3 <- t1+t2+t3+t4
-#on this plot we can see: 
-#Off target amplifications
-#Longer branch length = higher resolution
-
-
-# 3.3. - Evaluate the taxonomic coverage and the specificity of the primers within the Actinopterygii class (i.e. Actinopteri class based
-#        on the NCBI nomenclature). Also evaluate the taxonomic resolution of the primers at the genus level and correct for length of the
-#        barcode to allow for comparisons between primers. Add additional columns to the input file for all calculated statistics.
-
-dat.I$PT.Specificity <- rep("", nrow(dat.I))
-dat.I$PT.PWDistance <- rep("", nrow(dat.I))
-dat.I$PT.Length <- rep("", nrow(dat.I))
-dat.I$PT.Resolution <- rep("", nrow(dat.I))
-dat.I$PT.Order <- rep("", nrow(dat.I))
-dat.I$PT.Family <- rep("", nrow(dat.I))
-dat.I$PT.Genus <- rep("", nrow(dat.I))
-
-for (i in 1:nrow(dat.I)) {
-  tmp1 <- paste("PT", dat.I$Name[i], sep = ".")
-  TAXID.All <- length(unique(as.data.frame(get(tmp1)$taxonomy)$taxId))
-  TAXID.Act <- length(unique(subset(as.data.frame(get(tmp1)$taxonomy), subset = class == "Insecta")$taxId))
-  dat.I$PT.Specificity[i] <- round((TAXID.Act / TAXID.All) * 100, digits = 2)
-  dat.I$PT.PWDistance[i] <- as.numeric(calc_rank_dist_ave(get(tmp1), ranks = c("genus")))
-  dat.I$PT.Length[i] <- as.integer(mean(get(tmp1)$BLAST_result$product_length))
-  dat.I$PT.Resolution[i] <- as.numeric(dat.I$PT.PWDistance[i]) / as.numeric(dat.I$PT.Length[i])
-  dat.I$PT.Order[i] <- length(unique(subset(as.data.frame(get(tmp1)$taxonomy), subset = class == "Insecta")$order))
-  dat.I$PT.Family[i] <- length(unique(subset(as.data.frame(get(tmp1)$taxonomy), subset = class == "Insecta")$family))
-  dat.I$PT.Genus[i] <- length(unique(subset(as.data.frame(get(tmp1)$taxonomy), subset = class == "Insecta")$genus))
-}
-
-#   B. Primer specificity (i.e. the percentage of unique Actinopterygii species out of the total number of unique species recovered)
-
-gg.specificity <- ggplot(dat.I, aes(x = factor(Name, levels = Name), y = as.numeric(PT.Specificity))) +
-  geom_bar(stat = "identity", fill = "gray50") +
-  geom_hline(aes(yintercept = 90), linetype = "dashed", colour = "red3") +
-  coord_cartesian(ylim = c(30, 100)) +
-  ggtitle("B") +
-  ylab("% of unique Actinopterygii species") +
-  theme_classic() +
-  theme(
-    plot.title = element_text(size = 8, colour = "black", face = "bold"),
-    axis.title.x = element_blank(),
-    axis.title.y = element_text(size = 7, colour = "black"),
-    axis.text.x = element_text(size = 7, colour = "black", angle = 90, hjust = 1, vjust = 0.5),
-    axis.text.y = element_text(size = 7, colour = "black"),
-    axis.ticks.x = element_blank(),
-    axis.ticks.y = element_line(size = 0.25, colour = "black"),
-    axis.ticks.length = unit(0.1, "cm")
-  )
-gg.specificity
-
-#   C. Taxonomic coverage (i.e. no. of Actinopterygii orders for which sequences were obtained)
-
-gg.coverage <- ggplot(dat.I, aes(x = factor(Name, levels = Name), y = as.numeric(PT.Order))) +
-  geom_bar(stat = "identity", fill = "gray50") +
-  geom_hline(aes(yintercept = 30), linetype = "dashed", colour = "red3") +
-  coord_cartesian(ylim = c(0, 40)) +
-  ggtitle("C") +
-  ylab("No. of Actinopterygii orders") +
-  theme_classic() +
-  theme(
-    plot.title = element_text(size = 8, colour = "black", face = "bold"),
-    axis.title.x = element_blank(),
-    axis.title.y = element_text(size = 7, colour = "black"),
-    axis.text.x = element_text(size = 7, colour = "black", angle = 90, hjust = 1, vjust = 0.5),
-    axis.text.y = element_text(size = 7, colour = "black"),
-    axis.ticks.x = element_blank(),
-    axis.ticks.y = element_line(size = 0.25, colour = "black"),
-    axis.ticks.length = unit(0.1, "cm")
-  )
-gg.coverage
-
-```
 
 
 ```{r sessioninfo}
